# snap-rdma

./: .checkpatch.conf  .gitignore  CODEOWNERS  LICENSE-NVIDIA  Makefile.am  README.md  autogen.sh  checkpatch.pl  code_style_check.sh  configure.ac  configure_dpa_gtest.sh  cross-gcc-riscv64.txt  libsnap.spec.in  meson.build  meson_options.txt  mlnx-libsnap.spec.in
.ci/: .checkpatch.conf  Dockerfile.centos.stream8  Dockerfile.centos7.9.2009  Dockerfile.centos8.3.2011  Dockerfile.debian10  Dockerfile.euleros2sp8aarch64  Dockerfile.euleros2sp9x86  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  README.md  build.sh  build_dev.sh  code_style_check.sh  codespell.sh  codespell_ignore.txt  cov.sh  git_tag.sh  job_matrix.yaml  job_matrix_dev.yaml  k8s_pod.yaml  manage_repo.py  proj_jjb.yaml  proj_jjb_pr.yaml  upload.sh  upload_dev.sh
.ci/gitlint/: .gitlint  commit_rules.py  run_gitlint.sh
apu/: Makefile.am  apu_hello.c  com_context_dev.h  flexio_linker.ld
blk/: snap_blk_dev.c  snap_blk_dev.h  snap_blk_ops.h  snap_null_blk_dev.c  snap_null_blk_dev.h
ctrl/: Makefile.am  nvme_proto.h  nvme_register.c  nvme_register.h  snap_buf.c  snap_buf.h  snap_dp_map.c  snap_dp_map.h  snap_nvme_ctrl.c  snap_nvme_ctrl.h  snap_poll_groups.c  snap_poll_groups.h  snap_virtio_adm_spec.h  snap_virtio_blk_ctrl.c  snap_virtio_blk_ctrl.h  snap_virtio_blk_virtq.c  snap_virtio_blk_virtq.h  snap_virtio_common_ctrl.c  snap_virtio_common_ctrl.h  snap_virtio_fs_ctrl.c  snap_virtio_fs_ctrl.h  snap_virtio_fs_virtq.c  snap_virtio_fs_virtq.h  snap_virtio_net_ctrl.c  snap_virtio_net_ctrl.h  snap_virtio_state.h  snap_vq.c  snap_vq.h  snap_vq_adm.c  snap_vq_adm.h  snap_vq_internal.h  snap_vq_prm.h  virtio_blk_ext.h  virtq_common.c  virtq_common.h
debian/: changelog.in  control  copyright  mlnx-libsnap.install  rules
dpa/: Makefile.am  com_dev.c  com_dev.h  dpa.h  dpa_cmd_lat_bench.c  dpa_common.c  dpa_dma_test.c  dpa_hello.c  dpa_hello_event.c  dpa_log.h  dpa_rt_test_event.c  dpa_rt_test_polling.c  dpa_start.c  dpa_virtq_split.c  flexio_dev_dpa_arch.h  flexio_linker.ld  hello_flexio_com.h  hello_flexio_hw.c  meson.build  snap_dma_compat.h
fs/: snap_fs_dev.c  snap_fs_dev.h  snap_fs_ops.h  snap_fsd_dev.c  snap_fsd_dev.h
m4/: flexio.m4  gtest.m4  ib.m4
rpc/: Makefile.am  emulation_list.md  snap_json_rpc_client.c  snap_json_rpc_client.h  snap_rpc.py
rpc/md/: controller_async_event_disable.md  controller_async_event_enable.md  controller_list.md  controller_nvme_create.md  controller_nvme_delete.md  controller_nvme_namespace_attach.md  controller_nvme_namespace_detach.md  controller_nvme_namespace_list.md  controller_virtio_blk_bdev_attach.md  controller_virtio_blk_bdev_detach.md  controller_virtio_blk_bdev_list.md  controller_virtio_blk_create.md  controller_virtio_blk_delete.md  controller_virtio_blk_get_debugstat.md  dpu_exec.md  emulation_device_attach.md  emulation_device_attach_nvme.md  emulation_device_attach_virtio_blk.md  emulation_device_detach.md  emulation_functions_list.md  emulation_managers_list.md  nvme_subsystem_list.md  storage_admin.md  subsystem_nvme_create.md  subsystem_nvme_delete.md  subsystem_nvme_list.md
src/: Makefile.am  meson.build  mlx5_ifc.h  mlx5_snap.c  mlx5_snap.h  queue.h  snap.c  snap.h  snap_channel.c  snap_channel.h  snap_crypto.c  snap_crypto.h  snap_dma.c  snap_dma.h  snap_dma_control.c  snap_dma_dv.c  snap_dma_internal.h  snap_dma_stat.h  snap_dma_verbs.c  snap_dp_map.c  snap_dp_map.h  snap_dpa.c  snap_dpa.h  snap_dpa_common.h  snap_dpa_p2p.c  snap_dpa_p2p.h  snap_dpa_rt.c  snap_dpa_rt.h  snap_dpa_virtq.c  snap_dpa_virtq.h  snap_dpa_virtq_common.h  snap_env.c  snap_env.h  snap_internal.h  snap_macros.h  snap_mb.h  snap_mr.c  snap_mr.h  snap_nvme.c  snap_nvme.h  (+19 more)
subprojects/: gtest.wrap
tests/: Makefile.am  gtest_example.cc  host_uio.c  host_uio.h  meson.build  sample_channel.c  snap_create_destroy_context.c  snap_create_destroy_nvme_cq.c  snap_create_destroy_nvme_ctrl.c  snap_create_destroy_nvme_namespace.c  snap_create_destroy_nvme_sq.c  snap_create_destroy_virtio_blk_queue.c  snap_create_destroy_virtio_ctrl.c  snap_create_destroy_virtio_queue.c  snap_dpa_p2p_test.c  snap_init_teardown_device.c  snap_init_teardown_nvme_device.c  snap_init_teardown_virtio_blk_device.c  snap_live_migration_client.c  snap_live_migration_client.h  snap_live_migration_cmd_test.c  snap_open_close.c  snap_open_close_channel.c  snap_open_close_device.c  snap_query_nvme_device.c  snap_query_pfs.c  snap_query_virtio_blk_device.c  snap_query_virtio_device.c  snap_rpc_client_open_close.c  snap_sample_device.c  snap_sample_device.h  snap_sample_uio_driver.c  snap_test.c  snap_test.h  test_sample_channel.cc  test_snap_dma.cc  test_snap_dma.h  test_snap_dp_map.cc  test_snap_dpa.cc  test_snap_qp.cc  (+2 more)
tests/apu/: Makefile.am  com_flow_host.c  com_flow_host.h
tests/dpa/: Makefile.am  com_host.h  hello_flexio.c
vrdma/: Makefile.am  snap_vrdma_admq.c  snap_vrdma_admq.h  snap_vrdma_ctrl.c  snap_vrdma_ctrl.h  snap_vrdma_ops.h  snap_vrdma_srv.c  snap_vrdma_srv.h  snap_vrdma_virtq.c  snap_vrdma_virtq.h  vrdma_virtq.h
