#
# Copyright (c) 2021-2022 NVIDIA CORPORATION & AFFILIATES, ALL RIGHTS RESERVED.
#
# This software product is a proprietary product of NVIDIA CORPORATION &
# AFFILIATES (the "Company") and all right, title, and interest in and to the
# software product, including all associated intellectual property rights, are
# and shall remain exclusively with the Company.
#
# This software product is governed by the End User License Agreement
# provided with the software product.
#

# Testing
option('enable-gtest', type : 'boolean', value : false, description : 'build unit tests')
option('with-flexio', type : 'string', description : 'flexio install prefix')
option('enable-debug', type : 'boolean', value : false, description : 'enable extra debug prints and code')
option('enable-simx', type : 'boolean', value : false, description : 'enable SIMX specific workaround. Must for SIMX')
