ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libsnap-json-rpc-client.la

libsnap_json_rpc_client_ladir = $(includedir)/
libsnap_json_rpc_client_la_HEADERS = snap_json_rpc_client.h
libsnap_json_rpc_client_la_SOURCES = snap_json_rpc_client.c
libsnap_json_rpc_client_la_CFLAGS = $(BASE_CFLAGS)
libsnap_json_rpc_client_la_LIBADD = -lpthread
